-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.15
-
None
-
Windows 10
Visual studio 2015
Qt 5.15.2
-
-
83e92e255 (dev), b4384dab0 (6.6), 22ab737dd (tqtc/lts-6.5)
Since Qt 5.15, with the new API QTabWidget::setTabVisible, it is possible to hide widgets in an easier way.
However, while the tab is properly visually hidden, the tab content itself is still available via user actions (wheel mouse or Tab key). When such a hidden tab is selected, we see the tab content in the stack and the tab itself is strangely rendered in the upper left corner of the QTabWidget. See attached screenshot where tab2 is supposed to be hidden.
Current workaround is to call QTabWidget::setTabEnabled to make that tab really unavailable. I find this awkward and don't think this should be necessary.
Please find attached a small project to reproduce the problem.